parser/GraphDBParser.cpp

// Generated from GraphDB.g4 by ANTLR 4.7.2


#include "GraphDBListener.h"
#include "GraphDBVisitor.h"

#include "GraphDBParser.h"


using namespace antlrcpp;
using namespace antlr4;

GraphDBParser::GraphDBParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

GraphDBParser::~GraphDBParser() {
  delete _interpreter;
}

std::string GraphDBParser::getGrammarFileName() const {
  return "GraphDB.g4";
}

const std::vector<std::string>& GraphDBParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& GraphDBParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StatementContext ------------------------------------------------------------------

GraphDBParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GraphDBParser::DmlStatementContext* GraphDBParser::StatementContext::dmlStatement() {
  return getRuleContext<GraphDBParser::DmlStatementContext>(0);
}

GraphDBParser::DdlStatementContext* GraphDBParser::StatementContext::ddlStatement() {
  return getRuleContext<GraphDBParser::DdlStatementContext>(0);
}


size_t GraphDBParser::StatementContext::getRuleIndex() const {
  return GraphDBParser::RuleStatement;
}

void GraphDBParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void GraphDBParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any GraphDBParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GraphDBVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

GraphDBParser::StatementContext* GraphDBParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 0, GraphDBParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(228);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GraphDBParser::T__1:
      case GraphDBParser::K_insert:
      case GraphDBParser::K_remove:
      case GraphDBParser::K_update:
      case GraphDBParser::K_select:
      case GraphDBParser::NAME_STRING: {
        enterOuterAlt(_localctx, 1);
        setState(222);
        dmlStatement();
        setState(223);
        match(GraphDBParser::T__0);
        break;
      }

      case GraphDBParser::K_drop:
      case GraphDBParser::K_create:
      case GraphDBParser::K_load: {
        enterOuterAlt(_localctx, 2);
        setState(225);
        ddlStatement();
        setState(226);
        match(GraphDBParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DmlStatementContext ------------------------------------------------------------------

GraphDBParser::DmlStatementContext::DmlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GraphDBParser::InsertStatContext* GraphDBParser::DmlStatementContext::insertStat() {
  return getRuleContext<GraphDBParser::InsertStatContext>(0);
}

GraphDBParser::RemoveStatContext* GraphDBParser::DmlStatementContext::removeStat() {
  return getRuleContext<GraphDBParser::RemoveStatContext>(0);
}

GraphDBParser::UpdateStatContext* GraphDBParser::DmlStatementContext::updateStat() {
  return getRuleContext<GraphDBParser::UpdateStatContext>(0);
}

GraphDBParser::QueryStatContext* GraphDBParser::DmlStatementContext::queryStat() {
  return getRuleContext<GraphDBParser::QueryStatContext>(0);
}


size_t GraphDBParser::DmlStatementContext::getRuleIndex() const {
  return GraphDBParser::RuleDmlStatement;
}

void GraphDBParser::DmlStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDmlStatement(this);
}

void GraphDBParser::DmlStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDmlStatement(this);
}


antlrcpp::Any GraphDBParser::DmlStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GraphDBVisitor*>(visitor))
    return parserVisitor->visitDmlStatement(this);
  else
    return visitor->visitChildren(this);
}

GraphDBParser::DmlStatementContext* GraphDBParser::dmlStatement() {
  DmlStatementContext *_localctx = _tracker.createInstance<DmlStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, GraphDBParser::RuleDmlStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(234);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GraphDBParser::K_insert: {
        enterOuterAlt(_localctx, 1);
        setState(230);
        insertStat();
        break;
      }

      case GraphDBParser::K_remove: {
        enterOuterAlt(_localctx, 2);
        setState(231);
        removeStat();
        break;
      }

      case GraphDBParser::K_update: {
        enterOuterAlt(_localctx, 3);
        setState(232);
        updateStat();
        break;
      }

      case GraphDBParser::T__1:
      case GraphDBParser::K_select:
      case GraphDBParser::NAME_STRING: {
        enterOuterAlt(_localctx, 4);
        setState(233);
        queryStat(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertStatContext ------------------------------------------------------------------

GraphDBParser::InsertStatContext::InsertStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GraphDBParser::InsertGsetStatContext* GraphDBParser::InsertStatContext::insertGsetStat() {
  return getRuleContext<GraphDBParser::InsertGsetStatContext>(0);
}

GraphDBParser::InsertGStatContext* GraphDBParser::InsertStatContext::insertGStat() {
  return getRuleContext<GraphDBParser::InsertGStatContext>(0);
}


size_t GraphDBParser::InsertStatContext::getRuleIndex() const {
  return GraphDBParser::RuleInsertStat;
}

void GraphDBParser::InsertStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInsertStat(this);
}

void GraphDBParser::InsertStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInsertStat(this);
}


antlrcpp::Any GraphDBParser::InsertStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GraphDBVisitor*>(visitor))
    return parserVisitor->visitInsertStat(this);
  else
    return visitor->visitChildren(this);
}

GraphDBParser::InsertStatContext* GraphDBParser::insertStat() {
  InsertStatContext *_localctx = _tracker.createInstance<InsertStatContext>(_ctx, getState());
  enterRule(_localctx, 4, GraphDBParser::RuleInsertStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(238);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(236);
      insertGsetStat();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(237);
      insertGStat();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RemoveStatContext ------------------------------------------------------------------

GraphDBParser::RemoveStatContext::RemoveStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GraphDBParser::RemoveGsetStatContext* GraphDBParser::RemoveStatContext::removeGsetStat() {
  return getRuleContext<GraphDBParser::RemoveGsetStatContext>(0);
}

GraphDBParser::RemoveGStatContext* GraphDBParser::RemoveStatContext::removeGStat() {
  return getRuleContext<GraphDBParser::RemoveGStatContext>(0);
}


size_t GraphDBParser::RemoveStatContext::getRuleIndex() const {
  return GraphDBParser::RuleRemoveStat;
}

void GraphDBParser::RemoveStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRemoveStat(this);
}

void GraphDBParser::RemoveStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRemoveStat(this);
}


antlrcpp::Any GraphDBParser::RemoveStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GraphDBVisitor*>(visitor))
    return parserVisitor->visitRemoveStat(this);
  else
    return visitor->visitChildren(this);
}

GraphDBParser::RemoveStatContext* GraphDBParser::removeStat() {
  RemoveStatContext *_localctx = _tracker.createInstance<RemoveStatContext>(_ctx, getState());
  enterRule(_localctx, 6, GraphDBParser::RuleRemoveStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(242);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(240);
      removeGsetStat();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(241);
      removeGStat();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertGsetStatContext ------------------------------------------------------------------

GraphDBParser::InsertGsetStatContext::InsertGsetStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GraphDBParser::InsertGsetStatContext::K_insert() {
  return getToken(GraphDBParser::K_insert, 0);
}

tree::TerminalNode* GraphDBParser::InsertGsetStatContext::K_into() {
  return getToken(GraphDBParser::K_into, 0);
}

tree::TerminalNode* GraphDBParser::InsertGsetStatContext::K_graphset() {
  return getToken(GraphDBParser::K_graphset, 0);
}

GraphDBParser::GsidContext* GraphDBParser::InsertGsetStatContext::gsid() {
  return getRuleContext<GraphDBParser::GsidContext>(0);
}

GraphDBParser::GidListContext* GraphDBParser::InsertGsetStatContext::gidList() {
  return getRuleContext<GraphDBParser::GidListContext>(0);
}


size_t GraphDBParser::InsertGsetStatContext::getRuleIndex() const {
  return GraphDBParser::RuleInsertGsetStat;
}

void GraphDBParser::InsertGsetStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInsertGsetStat(this);
}

void GraphDBParser::InsertGsetStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInsertGsetStat(this);
}


antlrcpp::Any GraphDBParser::InsertGsetStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GraphDBVisitor*>(visitor))
    return parserVisitor->visitInsertGsetStat(this);
  else
    return visitor->visitChildren(this);
}

GraphDBParser::InsertGsetStatContext* GraphDBParser::insertGsetStat() {
  InsertGsetStatContext *_localctx = _tracker.createInstance<InsertGsetStatContext>(_ctx, getState());
  enterRule(_localctx, 8, GraphDBParser::RuleInsertGsetStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(244);
    match(GraphDBParser::K_insert);
    setState(245);
    match(GraphDBParser::K_into);
    setState(246);
    match(GraphDBParser::K_graphset);
    setState(247);
    gsid();
    setState(248);
    match(GraphDBParser::T__1);
    setState(249);
    gidList();
    setState(250);
    match(GraphDBParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertGStatContext ------------------------------------------------------------------

GraphDBParser::InsertGStatContext::InsertGStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GraphDBParser::InsertGStatContext::K_insert() {
  return getToken(GraphDBParser::K_insert, 0);
}

GraphDBParser::GraphContext* GraphDBParser::InsertGStatContext::graph() {
  return getRuleContext<GraphDBParser::GraphContext>(0);
}

tree::TerminalNode* GraphDBParser::InsertGStatContext::K_into() {
  return getToken(GraphDBParser::K_into, 0);
}

std::vector<tree::TerminalNode *> GraphDBParser::InsertGStatContext::K_graph() {
  return getTokens(GraphDBParser::K_graph);
}

tree::TerminalNode* GraphDBParser::InsertGStatContext::K_graph(size_t i) {
  return getToken(GraphDBParser::K_graph, i);
}

std::vector<GraphDBParser::GidContext *> GraphDBParser::InsertGStatContext::gid() {
  return getRuleContexts<GraphDBParser::GidContext>();
}

GraphDBParser::GidContext* GraphDBParser::InsertGStatContext::gid(size_t i) {
  return getRuleContext<GraphDBParser::GidContext>(i);
}

tree::TerminalNode* GraphDBParser::InsertGStatContext::K_file() {
  return getToken(GraphDBParser::K_file, 0);
}

GraphDBParser::FilenamelistContext* GraphDBParser::InsertGStatContext::filenamelist() {
  return getRuleContext<GraphDBParser::FilenamelistContext>(0);
}


size_t GraphDBParser::InsertGStatContext::getRuleIndex() const {
  return GraphDBParser::RuleInsertGStat;
}

void GraphDBParser::InsertGStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInsertGStat(this);
}

void GraphDBParser::InsertGStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInsertGStat(this);
}


antlrcpp::Any GraphDBParser::InsertGStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GraphDBVisitor*>(visitor))
    return parserVisitor->visitInsertGStat(this);
  else
    return visitor->visitChildren(this);
}

GraphDBParser::InsertGStatContext* GraphDBParser::insertGStat() {
  InsertGStatContext *_localctx = _tracker.createInstance<InsertGStatContext>(_ctx, getState());
  enterRule(_localctx, 10, GraphDBParser::RuleInsertGStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(272);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(252);
      match(GraphDBParser::K_insert);
      setState(253);
      graph();
      setState(254);
      match(GraphDBParser::K_into);
      setState(255);
      match(GraphDBParser::K_graph);
      setState(256);
      gid();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(258);
      match(GraphDBParser::K_insert);
      setState(259);
      match(GraphDBParser::K_file);
      setState(260);
      filenamelist();
      setState(261);
      match(GraphDBParser::K_into);
      setState(262);
      match(GraphDBParser::K_graph);
      setState(263);
      gid();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(265);
      match(GraphDBParser::K_insert);
      setState(266);
      match(GraphDBParser::K_graph);
      setState(267);
      gid();
      setState(268);
      match(GraphDBParser::K_into);
      setState(269);
      match(GraphDBParser::K_graph);
      setState(270);
      gid();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GraphNameItemContext ------------------------------------------------------------------

GraphDBParser::GraphNameItemContext::GraphNameItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GraphDBParser::GraphContext* GraphDBParser::GraphNameItemContext::graph() {
  return getRuleContext<GraphDBParser::GraphContext>(0);
}

tree::TerminalNode* GraphDBParser::GraphNameItemContext::K_as() {
  return getToken(GraphDBParser::K_as, 0);
}

GraphDBParser::GidContext* GraphDBParser::GraphNameItemContext::gid() {
  return getRuleContext<GraphDBParser::GidContext>(0);
}


size_t GraphDBParser::GraphNameItemContext::getRuleIndex() const {
  return GraphDBParser::RuleGraphNameItem;
}

void GraphDBParser::GraphNameItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGraphNameItem(this);
}

void GraphDBParser::GraphNameItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGraphNameItem(this);
}


antlrcpp::Any GraphDBParser::GraphNameItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GraphDBVisitor*>(visitor))
    return parserVisitor->visitGraphNameItem(this);
  else
    return visitor->visitChildren(this);
}

GraphDBParser::GraphNameItemContext* GraphDBParser::graphNameItem() {
  GraphNameItemContext *_localctx = _tracker.createInstance<GraphNameItemContext>(_ctx, getState());
  enterRule(_localctx, 12, GraphDBParser::RuleGraphNameItem);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(279);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GraphDBParser::T__1: {
        enterOuterAlt(_localctx, 1);
        setState(274);
        graph();
        setState(275);
        match(GraphDBParser::K_as);
        setState(276);
        gid();
        break;
      }

      case GraphDBParser::NAME_STRING: {
        enterOuterAlt(_localctx, 2);
        setState(278);
        gid();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GraphNameListContext ------------------------------------------------------------------

GraphDBParser::GraphNameListContext::GraphNameListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GraphDBParser::GraphNameItemContext* GraphDBParser::GraphNameListContext::graphNameItem() {
  return getRuleContext<GraphDBParser::GraphNameItemContext>(0);
}

GraphDBParser::GraphNameListContext* GraphDBParser::GraphNameListContext::graphNameList() {
  return getRuleContext<GraphDBParser::GraphNameListContext>(0);
}


size_t GraphDBParser::GraphNameListContext::getRuleIndex() const {
  return GraphDBParser::RuleGraphNameList;
}

void GraphDBParser::GraphNameListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGraphNameList(this);
}

void GraphDBParser::GraphNameListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GraphDBListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGraphNameList(this);
}


antlrcpp::Any GraphDBParser::GraphNameListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GraphDBVisitor*>(visitor))
    return parserVisitor->visitGraphNameList(this);
  else
    return visitor->visitChildren(this);
}

GraphDBParser::GraphNameListContext* GraphDBParser::graphNameList() {
  GraphNameListContext *_localctx = _tracker.createInstance<GraphNameListContext>(_ctx, getState());
  enterRule(_localctx, 14, GraphDBParser::RuleGraphNameList);
